--- a/src/app/components/loquesea/loquesea.component.html
+++ b/src/app/components/loquesea/loquesea.component.html
@@ -1,30 +1,81 @@
-<div class="container">
-    <div routerLink="home/" style="cursor: pointer;">
-        <mat-icon class="mat-18" style="color: white;">arrow_back</mat-icon>
-    </div>
+<div class="container" *ngIf="modo==1">
+
+    <mat-icon routerLink="home/" class="mat-18" style="color: white; cursor:pointer ">arrow_back</mat-icon>
+
 
     <div style="border-bottom: 1px solid white; color: white;" class="text-right">
-        <h6>¿Qué deseas pedir?</h6>
+        <h6>¿Que deseas pedir?</h6>
     </div>
-
-    <div class="mx-3 mt-4" style="color: white;">
-        <mat-form-field style="width: 100%;" appearance="outline" color="accent">
-            <mat-label>Descripción del pedido</mat-label>
-            <textarea cdkAutosizeMinRows="5" cdkTextareaAutosize matInput ></textarea>
-        </mat-form-field>
-    </div>
+    <form [formGroup]="formLoQueSea">
+        <div class="mx-3 mt-4" style="color: white;">
+            <mat-form-field style="width: 100%;" appearance="outline" color="accent">
+                <mat-label>Descripción del pedido <strong>*</strong></mat-label>
+                <textarea formControlName="Descripcion" cdkAutosizeMinRows="5" cdkTextareaAutosize matInput></textarea>
+                <div *ngIf="formLoQueSea.controls.Descripcion.invalid && (formLoQueSea.controls.Descripcion.dirty || formLoQueSea.controls.Descripcion.touched || submit)">
+                    <mat-error *ngIf="formLoQueSea.controls.Descripcion.errors.required">
+                        Campo <strong>requerido</strong>
+                    </mat-error>
+                    <mat-error *ngIf="formLoQueSea.controls.Descripcion.errors.maxlength">
+                        Demasiados <strong>caracteres</strong>
+                    </mat-error>
+                </div>
+            </mat-form-field>
+        </div>
+    </form>
 
     <div class="mx-3 mt-1 d-flex align-items-center" style="color: white;">
-        <label class="mr-3 mb-0">Agregar imagen: </label>
-        <button mat-mini-fab color="accent" style="outline: none;">
+        <label class="mr-3 mb-0">Agregar imagen (JPG): </label>
+        <button mat-mini-fab color="accent" style="outline: none;" (click)="imgUpload.click()">
             <mat-icon>add</mat-icon>
         </button>
     </div>
 
-    <div class="mx-3 mt-4 d-flex justify-content-end" style="color: white;">
-        <button mat-raised-button color="accent" style="outline: none;">
+    <input style="display: none" type="file" (change)="onSelectImage($event); imgUpload.value = '' " #imgUpload>
+
+    <div class="image-area mt-5 ml-5" *ngIf="imageUrl">
+        <img [src]="imageUrl" height="150" alt="Preview">
+        <button class="remove-image" (click)="imageUrl=null;" style="display: inline;">&#215;</button>
+    </div>
+
+
+    <div class="mx-3 mt-5 d-flex justify-content-end" style="color: white;">
+        <button mat-raised-button color="accent" style="outline: none;" (click)="cambiarModo('select_origen')">
             Continuar
             <mat-icon>forward</mat-icon>
         </button>
     </div>
+</div>
+
+<div class="container" *ngIf="modo==2">
+
+    <mat-icon (click)="ngOnInit()" class="mat-18" style="color: white; cursor: pointer">arrow_back</mat-icon>
+
+
+    <div style="border-bottom: 1px solid white; color: white;" class="text-right">
+        <h6>Seleccionar {{ seleccionar }}</h6>
+    </div>
+
+    <mat-form-field class="mt-4" style="width: 100%; color: white" appearance="outline" color="accent">
+        <mat-label>Ciudad</mat-label>
+        <input matInput>
+    </mat-form-field>
+
+    <div class="row">
+        <div class="col-8">
+            <mat-form-field style="width: 100%; color: white" appearance="outline" color="accent">
+                <mat-label>Calle</mat-label>
+                <input matInput>
+            </mat-form-field>
+        </div>
+        <div class="col-4">
+            <mat-form-field style="width: 100%; color: white" appearance="outline" color="accent">
+                <mat-label>Número</mat-label>
+                <input matInput>
+            </mat-form-field>
+        </div>
+    </div>
+    <mat-form-field style="width: 100%; color: white" appearance="outline" color="accent">
+        <mat-label>Descripcion</mat-label>
+        <input matInput>
+    </mat-form-field>
 </div>
