Arreglo responsive en home component y agrego TODO.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -31,29 +31,29 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-      </div>
+    </div>
 
-    <div class="row mt-4">
-        <div class="col-6">
+    <div class="row mt-4 text-center">
+        <div class="col-6 d-flex justify-content-center">
             <div class="card bg-transparent shadow my-card" style="cursor: pointer;width: 180px; border-radius: 10px; color: white; border-color: white;">
-                <img style="border-radius: 10px;" src="assets/img/15614775255199.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
+                <img style="border-radius: 10px;" src="assets\img\Annotation 2020-09-06 014737.png" class="card-img-top" alt="...">
+                <div class="card-body d-flex align-items-center justify-content-center">
                   <h6 class="card-title">Comercios mejor votados</h6>
                 </div>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-6 d-flex justify-content-center">
             <div class="card bg-transparent shadow my-card" style="cursor: pointer;width: 180px; border-radius: 10px; color: white; border-color: white;">
                 <img routerLink="/loquesea" style="border-radius: 10px;" src="assets/img/e4285e1d366262ba2fcf49ca69d91a73--pizza-delivery-fast-foods.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="card-body d-flex align-items-center justify-content-center">
                   <h6 routerLink="loquesea" class="card-title">Pedir lo que sea</h6>
                 </div>
             </div>
         </div>
     </div>
 
-    <mat-card class="mx-3 mt-4 bg-transparent shadow my-card" style="cursor: pointer; color: white; border: 1px solid white;">Todas las categorías</mat-card>
-    <mat-card class="mx-3 mt-4 bg-transparent shadow text-right my-card" style="cursor: pointer; color: white; border: 1px solid white;">Tus pedidos previos</mat-card>
+    <mat-card class="mt-4 bg-transparent shadow my-card" style="border-radius: 10px; cursor: pointer; color: white; border: 1px solid white;">Todas las categorías</mat-card>
+    <mat-card class="mt-4 bg-transparent shadow text-right my-card" style="border-radius: 10px; cursor: pointer; color: white; border: 1px solid white;">Tus pedidos previos</mat-card>
 
 </div>
     
