Arreglo parte inferior del fondo de la app.

--- a/src/app/components/loquesea/loquesea.component.html
+++ b/src/app/components/loquesea/loquesea.component.html
@@ -74,7 +74,7 @@
       </div>      
   </form>
 
-  <div class="mx-3 mt-5 d-flex justify-content-end" style="color: white;">
+  <div class="mx-3 mt-5 d-flex justify-content-end mb-5" style="color: white;">
       <button mat-raised-button color="accent" style="outline: none;" (click)="cambiarModo('select_origen')">
           Continuar
           <mat-icon>forward</mat-icon>
@@ -141,7 +141,7 @@
           <agm-marker [latitude]="marker.lat" [longitude]="marker.long" [visible]="markerVisible"></agm-marker>
       </agm-map>
   </div>
-  <div class="mx-3 mt-5 d-flex justify-content-end" style="color: white;">
+  <div class="mx-3 mt-5 d-flex justify-content-end mb-5" style="color: white;">
       <button mat-raised-button *ngIf="modo==2" color="accent" style="outline: none;" (click)="cambiarModo('select_destino')">
           Continuar
           <mat-icon>forward</mat-icon>
