Agrego items a barra lateral a modo de placeholders.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -46,7 +46,7 @@
             <div class="card bg-transparent shadow my-card" style="cursor: pointer;width: 180px; border-radius: 10px; color: white; border-color: white;">
                 <img routerLink="/loquesea" style="border-radius: 10px;" src="assets/img/e4285e1d366262ba2fcf49ca69d91a73--pizza-delivery-fast-foods.jpg" class="card-img-top" alt="...">
                 <div class="card-body d-flex align-items-center justify-content-center">
-                  <h6 routerLink="loquesea" class="card-title">Pedir lo que sea</h6>
+                  <h6 routerLink="/loquesea" class="card-title">Pedir lo que sea</h6>
                 </div>
             </div>
         </div>
