--- a/src/app/components/pago/pago.component.scss
+++ b/src/app/components/pago/pago.component.scss
@@ -1,18 +1,90 @@
 ::ng-deep .mat-form-field-label {
-  color: white !important;
+    color: white !important;
 }
 
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
-  color: white;
+    color: white;
 }
 
 ::ng-deep .mat-form-field-outline .mat-focused {
-  color: white;
+    color: white;
 }
 
 //mat-input focused color
-::ng-deep
-  .mat-form-field-appearance-outline.mat-focused
-  .mat-form-field-outline-thick {
-  color: white !important;
+::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
+    color: white !important;
+}
+
+.card {
+    width: 300px;
+    height: 178px;
+    position: relative;
+    margin: 0 auto;
+    background-color: #f1404b;
+    overflow: hidden;
+    z-index: 1;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    -webkit-box-shadow: 0 15px 24px rgba(37, 44, 65, 0.32);
+    -moz-box-shadow: 0 15px 24px rgba(37, 44, 65, 0.32);
+    box-shadow: 0 15px 24px rgba(37, 44, 65, 0.32);
+}
+
+.card-content {
+    width: 100%;
+    padding: 20px;
+    position: relative;
+    float: left;
+    z-index: 1;
+}
+
+#logo-visa {
+    position: relative;
+    margin-top: -20px;
+    left: 190px;
+}
+
+.card h5 {
+    margin: 0;
+    line-height: 1.4;
+    font-size: 11px;
+    font-weight: 700;
+    color: #c9d6de;
+    letter-spacing: 1px;
+    text-align: left;
+    text-transform: uppercase;
+}
+
+.card h5>span {
+    margin-left: 87px;
+}
+
+.card h5.total {
+    margin-top: 20px;
+}
+
+.card h6 {
+    margin: 0;
+    line-height: 1.4;
+    font-family: 'PT Mono';
+    font-size: 18px;
+    font-weight: 400;
+    color: #f4f5f9;
+    letter-spacing: 0px;
+    text-align: left;
+    text-transform: uppercase;
+    line-height: 1.8;
+}
+
+.card h6>span {
+    margin-left: 64px;
+}
+
+.wave {
+    height: 300px;
+    width: 300px;
+    position: relative;
+    background: #780910;
+    z-index: -1;
 }
