se modifica mensaje de error fecha de vencimiento

--- a/src/app/components/pago/pago.component.html
+++ b/src/app/components/pago/pago.component.html
@@ -107,7 +107,7 @@
                                 Campo <strong>requerido</strong>
                             </mat-error>
                             <mat-error *ngIf="formTarjeta.controls.fechaVencimiento.errors?.dateValidator">
-                                Fecha <strong>Invalida</strong>
+                                Tarjeta <strong>vencidad</strong>
                             </mat-error>
 
                             <mat-error *ngIf="formTarjeta.controls.fechaVencimiento.errors.pattern">
