--- a/src/app/components/pago/pago.component.html
+++ b/src/app/components/pago/pago.component.html
@@ -12,6 +12,9 @@
   >
     <h6>Opciones de pago</h6>
   </div>
+  <div class="ml-3 my-4" style="color: white;">
+    <p>Costo de envío: <strong>$70</strong></p>
+  </div>
   <form [formGroup]="formOpciones">
     <div class="mx-3 mt-4 justify-content-center" style="color: white">
       <mat-radio-group
