Alineo botones en pago. Centro correctamente botones en resumen.

--- a/src/app/components/pago/pago.component.html
+++ b/src/app/components/pago/pago.component.html
@@ -151,7 +151,7 @@
         </form>
     </div>
 
-    <div class="mx-3 mt-5 d-flex justify-content-center" style="color: white;" *ngIf="modo==4||modo==5">
+    <div class="mx-3 mt-5 d-flex justify-content-end" style="color: white;" *ngIf="modo==4||modo==5">
         <button mat-raised-button color="warn" (click)="cancelar()">
             Cancelar
             <mat-icon>close</mat-icon>
