--- a/src/app/components/resumen/resumen.component.html
+++ b/src/app/components/resumen/resumen.component.html
@@ -87,14 +87,14 @@
   </div>
 
   <!-- Botones -->
-  <div class="row mt-4 justify-content-center">
-    <div class="col-4 mx-3 p-0">
+  <div class="row mt-4 d-flex justify-content-center">
+    <div class="col-4  d-flex justify-content-center">
       <button mat-raised-button color="warn" (click)="cancelar()">
         Cancelar
         <mat-icon>close</mat-icon>
       </button>
     </div>
-    <div class="col-4 mx-3 p-0">
+    <div class="col-4  d-flex justify-content-center">
       <button mat-raised-button color="primary" (click)="confirmar()">
         Confirmar
         <mat-icon>check</mat-icon>
